# Hospital_Management_System

./: .gitattributes  .gitignore  GEMINI.md  LICENSE  README.md  implementation_plan.md  task.md  walkthrough.md
backend/: event_and_nullable_migration.py  manage.sh  output.txt  pharmacist_migration.py  pharmacist_nullable_dept_migration.py  pyproject.toml  run.py  seed_medicines.py  worker.py
backend/app/: __init__.py  adminCommands.py  celeryConfig.py  config.py  extensions.py  security.py
backend/app/api_models/: __init__.py  application_model.py  appointment_models.py  auth_models.py  department_models.py  doctor_models.py  event_model.py  medical_record_models.py  medistore_models.py  nurse_models.py  patient_models.py  patient_vital_models.py  pharmacist_models.py
backend/app/controllers/: application_controller.py  appointment_controller.py  auth_controller.py  department_controller.py  doctor_controller.py  event_controller.py  medical_records_controller.py  medistore_controller.py  nurse_controller.py  patient_controller.py  patient_vitals_controller.py  pharmacist_controller.py
backend/app/errors/: __init__.py  exceptions.py  handlers.py
backend/app/models/: __init__.py  applications.py  appointment.py  audit_log.py  department.py  doctor.py  event.py  invoice.py  lab_report.py  medical_record.py  medistore.py  notification.py  nurse.py  patient.py  patient_vitals.py  pharmacist.py  token_blocklist.py  user.py
backend/app/routes/: __init__.py  analytics.py  application.py  appointment.py  auth.py  department.py  doctor.py  event.py  invoice.py  (+8 more)
(+97 files in other folders)
