[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
]
