[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-caching>=2.4.0",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-restx>=1.3.2",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "simple-websocket>=1.1.0",
]
